tests/ui/g-loop-control-wire-path.stderr
error[E0080]: evaluation panicked: loop control messages require local path
 --> src/global.rs
  |
  |         validate_token_control_payload_contract(spec);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `<hibana::g::Msg<125, hibana::integration::cap::GenericCapToken<WireLoopControlKind>, WireLoopControlKind> as hibana::global::MessageControlSpec>::CONTROL` failed inside this call
  |
note: inside `hibana::global::validate_token_control_payload_contract`
 --> src/global.rs
  |
  |     validate_control_descriptor_contract(spec);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::validate_control_descriptor_contract`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/global.rs
  |
  |                 panic!("loop control messages require local path");
  |                 -------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global.rs
  |
  |     const CONTROL: Option<StaticControlDesc> = <Self as MessageControlSpec>::CONTROL;
  |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global.rs
  |
  |             let path = match <M as MessageRuntime>::CONTROL {
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global.rs
  |
  | /     const {
  | |         let from = <From as KnownRole>::INDEX;
  | |         let to = <To as KnownRole>::INDEX;
  | |         crate::global::validate_role_index(from);
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<Role<0>, Role<1>, Msg<125, GenericCapToken<WireLoopControlKind>, WireLoopControlKind>, 0>`
  --> tests/ui/g-loop-control-wire-path.rs:46:13
   |
46 |       let _ = g::send::<
   |  _____________^
47 | |         g::Role<0>,
48 | |         g::Role<1>,
49 | |         g::Msg<
...  |
54 | |         0,
55 | |     >();
   | |_______^
